FEAT: Remove, update, append rows
