# src/app/api/v1/sheets/route.ts
@@ -1,4 +1,4 @@
-import { getAllFileList } from "@/utils/sheets"
+import { getAllFileList } from '@/utils/sheets'
 
 export async function GET() {
   const res = await getAllFileList()
@@ -6,13 +6,17 @@ export async function GET() {
   if (res && res.length > 0) {
     return Response.json({
       data: res,
-    });
-  } else {
-    return Response.json({
-      message: 'Can not retrieve any files. Make sure to give access to the service account.',
-      data: [],
-    }, {
-      status: 400
     })
+  } else {
+    return Response.json(
+      {
+        message:
+          'Can not retrieve any files. Make sure to give access to the service account.',
+        data: [],
+      },
+      {
+        status: 400,
+      }
+    )
   }
 }
